--- a/packages/react/Toggle/package.json
+++ b/packages/react/Toggle/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/styles",
-  "version": "3.2.0-rc.2",
+  "name": "@nimbus-ds/toggle",
+  "version": "1.0.0-rc.2",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -12,12 +12,19 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "webpack",
+    "build": "yarn build:types && webpack",
+    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ../../../",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/tokens": "workspace:*"
+    "@nimbus-ds/skeleton": "workspace:*",
+    "@nimbus-ds/styles": "workspace:*",
+    "@nimbus-ds/text": "workspace:*"
+  },
+  "peerDependencies": {
+    "react": "^16.8 || ^17.0 || ^18.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
@@ -28,15 +35,11 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/babel-plugin": "^1.1.7",
-    "@vanilla-extract/css": "^1.7.3",
-    "@vanilla-extract/recipes": "^0.2.5",
-    "@vanilla-extract/sprinkles": "^1.4.1",
-    "@vanilla-extract/webpack-plugin": "^2.1.12",
-    "mini-css-extract-plugin": "^2.6.1",
+    "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "3.1.0"
+  "stableVersion": "0.0.0"
 }
