--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tokens",
-  "version": "4.0.0",
+  "version": "5.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -26,5 +26,6 @@
   },
   "devDependencies": {
     "style-dictionary": "^3.7.1"
-  }
+  },
+  "stableVersion": "4.0.0"
 }
