--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set Node version
         uses: actions/setup-node@v1
         with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
-      
+          node-version: "${{ steps.nvm.outputs.NVMRC }}"
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
@@ -29,10 +29,12 @@ jobs:
       - name: Install dependencies
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
-        
+
       - name: Run build
-        run: yarn build
-        
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=4096" 
+          yarn build
+
       - name: Run lint
         run: yarn lint
 
