--- a/packages/react/Tooltip/package.json
+++ b/packages/react/Tooltip/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/toast",
-  "version": "1.2.0-rc.1",
+  "name": "@nimbus-ds/tooltip",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,11 +18,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/icon": "workspace:*",
-    "@nimbus-ds/spinner": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/text": "workspace:*",
-    "@tiendanube/icons": "^0.2.7"
+    "@floating-ui/react-dom-interactions": "^0.10.1",
+    "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -37,11 +34,12 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@vanilla-extract/dynamic": "^2.0.2",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.1.0"
+  "stableVersion": "0.0.0"
 }
