--- a/packages/react/Popover/package.json
+++ b/packages/react/Popover/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/tooltip",
-  "version": "1.0.1-rc.1",
+  "name": "@nimbus-ds/popover",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -41,5 +41,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.0.0"
+  "stableVersion": "0.0.0"
 }
