--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -34,6 +34,7 @@
     "@vanilla-extract/sprinkles": "^1.4.1",
     "@vanilla-extract/webpack-plugin": "^2.1.12",
     "mini-css-extract-plugin": "^2.6.1",
+    "rainbow-sprinkles": "^0.13.0",
     "ts-loader": "^9.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
