--- a/packages/react/Badge/package.json
+++ b/packages/react/Badge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/badge",
-  "version": "2.0.0",
+  "version": "2.1.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -40,5 +40,6 @@
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "2.0.0"
 }
