--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "4.5.0",
+  "version": "4.6.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -34,8 +34,10 @@
     "@vanilla-extract/sprinkles": "^1.4.1",
     "@vanilla-extract/webpack-plugin": "^2.1.12",
     "mini-css-extract-plugin": "^2.6.1",
+    "rainbow-sprinkles": "^0.13.0",
     "ts-loader": "^9.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "4.5.0"
 }
