--- a/packages/react/Popover/package.json
+++ b/packages/react/Popover/package.json
@@ -34,6 +34,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/stack": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
