--- a/packages/react/Stack/package.json
+++ b/packages/react/Stack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/tooltip",
-  "version": "1.0.2-rc.1",
+  "name": "@nimbus-ds/stack",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,7 +18,6 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@floating-ui/react-dom-interactions": "^0.10.1",
     "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
@@ -34,7 +33,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/box": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
@@ -42,5 +41,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.0.1"
+  "stableVersion": "0.0.0"
 }
