--- a/packages/react/Input/package.json
+++ b/packages/react/Input/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/icon",
-  "version": "1.3.0-rc.1",
+  "name": "@nimbus-ds/input",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,8 +18,10 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/icon": "workspace:*",
     "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/styles": "workspace:*",
+    "@tiendanube/icons": "^0.2.8"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -34,12 +36,11 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@tiendanube/icons": "^0.2.7",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.2.1"
+  "stableVersion": "0.0.0"
 }
