--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,13 +30,13 @@ jobs:
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
 
-      # - name: Run build
-      #   run: |
-      #     export NODE_OPTIONS="--max_old_space_size=4096" 
-      #     yarn build
+      - name: Run build
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=4096" 
+          yarn build
 
-      # - name: Run lint
-      #   run: yarn lint
+      - name: Run lint
+        run: yarn lint
 
       - name: Run tests
         run: yarn test:ci
