--- a/.github/workflows/publish-codecov.yml
+++ b/.github/workflows/publish-codecov.yml
@@ -1,9 +1,16 @@
-name: Quality
 
-on: [pull_request]
+name: Codecov
+
+on:
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - "**/package.json"
+      - ".yarn/versions/**"
 
 jobs:
-  pipeline-quality:
+  publish-codecov:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,9 +41,6 @@ jobs:
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096" 
           yarn build:essentials
-
-      - name: Run lint
-        run: yarn lint
 
       - name: Run tests
         run: yarn test:ci
