--- a/packages/react/Popover/package.json
+++ b/packages/react/Popover/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/box": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
