--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -32,9 +32,7 @@
     "@vanilla-extract/sprinkles": "^1.5.1",
     "glob": "^8.0.3",
     "rainbow-sprinkles": "^0.14.0",
-    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.75.0"
   }
 }
