--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "packages/*",
       "packages/*/*",
-      "packages/*/atomic/*",
-      "packages/*/composite/*"
+      "packages/*/*/atomic/*",
+      "packages/*/*/composite/*"
     ]
   },
   "scripts": {
@@ -68,6 +69,7 @@
     "@testing-library/react": "^13.3.0",
     "@tiendanube/eslint-config": "^0.3.2",
     "@types/jest": "28.1.6",
+    "@types/node": "^18.11.13",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -78,6 +80,7 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "copy-webpack-plugin": "^11.0.0",
+    "dts-bundle-generator": "^7.1.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -113,5 +116,5 @@
     "node": ">=14.17 <=16.x",
     "yarn": ">=3.2.0"
   },
-  "packageManager": "yarn@3.2.2"
+  "packageManager": "yarn@1.22.19"
 }
