--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,34 +36,45 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
+      //core
       "@nimbus-ds/tokens": ["./packages/core/tokens/dist"],
       "@nimbus-ds/styles": ["./packages/core/styles/src"],
       "@nimbus-ds/webpack": ["./packages/core/webpack/src"],
-      "@nimbus-ds/badge": ["./packages/react/atomic/Badge/src"],
-      "@nimbus-ds/box": ["./packages/react/atomic/Box/src"],
-      "@nimbus-ds/button": ["./packages/react/atomic/Button/src"],
-      "@nimbus-ds/checkbox": ["./packages/react/atomic/Checkbox/src"],
-      "@nimbus-ds/chip": ["./packages/react/atomic/Chip/src"],
-      "@nimbus-ds/icon": ["./packages/react/atomic/Icon/src"],
-      "@nimbus-ds/icon-button": ["./packages/react/atomic/IconButton/src"],
-      "@nimbus-ds/input": ["./packages/react/atomic/Input/src"],
-      "@nimbus-ds/label": ["./packages/react/atomic/Label/src"],
-      "@nimbus-ds/Link": ["./packages/react/atomic/Link/src"],
-      "@nimbus-ds/list": ["./packages/react/atomic/List/src"],
-      "@nimbus-ds/popover": ["./packages/react/atomic/Popover/src"],
-      "@nimbus-ds/radio": ["./packages/react/atomic/Radio/src"],
-      "@nimbus-ds/select": ["./packages/react/atomic/Select/src"],
-      "@nimbus-ds/skeleton": ["./packages/react/atomic/Skeleton/src"],
-      "@nimbus-ds/spinner": ["./packages/react/atomic/Spinner/src"],
-      "@nimbus-ds/stack": ["./packages/react/atomic/Stack/src"],
-      "@nimbus-ds/tag": ["./packages/react/atomic/Tag/src"],
-      "@nimbus-ds/text": ["./packages/react/atomic/Text/src"],
-      "@nimbus-ds/textarea": ["./packages/react/atomic/TextArea/src"],
-      "@nimbus-ds/thumbnail": ["./packages/react/atomic/Thumbnail/src"],
-      "@nimbus-ds/title": ["./packages/react/atomic/Title/src"],
-      "@nimbus-ds/toast": ["./packages/react/atomic/Toast/src"],
-      "@nimbus-ds/toggle": ["./packages/react/atomic/Toggle/src"],
-      "@nimbus-ds/tooltip": ["./packages/react/atomic/Tooltip/src"]
+      //atomics
+      "@nimbus-ds/components": ["./packages/react"],
+      "@nimbus-ds/badge": ["./packages/react/src/atomic/Badge/src"],
+      "@nimbus-ds/box": ["./packages/react/src/atomic/Box/src"],
+      "@nimbus-ds/button": ["./packages/react/src/atomic/Button/src"],
+      "@nimbus-ds/checkbox": ["./packages/react/src/atomic/Checkbox/src"],
+      "@nimbus-ds/chip": ["./packages/react/src/atomic/Chip/src"],
+      "@nimbus-ds/icon": ["./packages/react/src/atomic/Icon/src"],
+      "@nimbus-ds/file-uploader": [
+        "./packages/react/src/atomic/FileUploader/src"
+      ],
+      "@nimbus-ds/icon-button": ["./packages/react/src/atomic/IconButton/src"],
+      "@nimbus-ds/input": ["./packages/react/src/atomic/Input/src"],
+      "@nimbus-ds/label": ["./packages/react/src/atomic/Label/src"],
+      "@nimbus-ds/link": ["./packages/react/src/atomic/Link/src"],
+      "@nimbus-ds/list": ["./packages/react/src/atomic/List/src"],
+      "@nimbus-ds/popover": ["./packages/react/src/atomic/Popover/src"],
+      "@nimbus-ds/radio": ["./packages/react/src/atomic/Radio/src"],
+      "@nimbus-ds/select": ["./packages/react/src/atomic/Select/src"],
+      "@nimbus-ds/skeleton": ["./packages/react/src/atomic/Skeleton/src"],
+      "@nimbus-ds/spinner": ["./packages/react/src/atomic/Spinner/src"],
+      "@nimbus-ds/stack": ["./packages/react/src/atomic/Stack/src"],
+      "@nimbus-ds/tag": ["./packages/react/src/atomic/Tag/src"],
+      "@nimbus-ds/text": ["./packages/react/src/atomic/Text/src"],
+      "@nimbus-ds/textarea": ["./packages/react/src/atomic/Textarea/src"],
+      "@nimbus-ds/thumbnail": ["./packages/react/src/atomic/Thumbnail/src"],
+      "@nimbus-ds/title": ["./packages/react/src/atomic/Title/src"],
+      "@nimbus-ds/toast": ["./packages/react/src/atomic/Toast/src"],
+      "@nimbus-ds/toggle": ["./packages/react/src/atomic/Toggle/src"],
+      "@nimbus-ds/tooltip": ["./packages/react/src/atomic/Tooltip/src"],
+      //composites
+      "@nimbus-ds/alert": ["./packages/react/src/composite/Alert/src"],
+      "@nimbus-ds/card": ["./packages/react/src/composite/Card/src"],
+      "@nimbus-ds/sidebar": ["./packages/react/src/composite/Sidebar/src"],
+      "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"]
     }
   }
 }
