--- a/packages/react/src/atomic/Checkbox/tsconfig.json
+++ b/packages/react/src/atomic/Checkbox/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../../../../../tsconfig.json",
-  "include": ["./src", "../../../../../index.d.ts"],
+  "include": ["./src", "index.d.ts"],
   "exclude": ["src/**/*.spec.tsx"]
 }
