--- a/packages/react/src/atomic/List/package.json
+++ b/packages/react/src/atomic/List/package.json
@@ -9,8 +9,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "yarn build:types && webpack",
-    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ./",
+    "build": "webpack",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
