--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "include": [
-    "src/index.ts",
-    "./atomic/*",
-    "./composite/*",
-    "../../index.d.ts"
-  ],
-  "exclude": ["src/**/*.spec.tsx"],
+  "include": ["./src/index.ts", "./atomic/*", "./composite/*"],
+  "exclude": ["./src/**/*.spec.tsx"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonJS"
