--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     ]
   },
   "scripts": {
-    "build": "yarn clean && yarn build:styles && yarn build:essentials && npm run build:packages && yarn build:components",
-    "build:essentials": "turbo run build --filter=@nimbus-ds/skeleton --filter=@nimbus-ds/text --filter=@nimbus-ds/title --filter=@nimbus-ds/badge --filter=@nimbus-ds/spinner --filter=@nimbus-ds/icon",
-    "build:packages": "turbo run build --filter=!@nimbus-ds/components --filter=[origin/master]...",
-    "build:components": "turbo run build --filter=@nimbus-ds/components",
-    "build:styles": "turbo run build --filter=@nimbus-ds/styles...",
+    "build": "yarn clean && yarn build:packages",
+    "build:packages": "node ./.scripts/build:packages",
     "build:storybook": "build-storybook -c .storybook -o .build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
@@ -25,10 +22,10 @@
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
-    "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
+    "pre-push": "yarn test:coverage && yarn lint && yarn types:check && yarn bump:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:next && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
-    "publish:stable": "yarn bump:stable && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
+    "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
+    "publish:stable": "yarn bump:check && yarn bump:stable && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
@@ -81,6 +78,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
+    "child_process": "^1.0.2",
     "copy-webpack-plugin": "^11.0.0",
     "dts-bundle-generator": "^7.1.0",
     "eslint": "^8.19.0",
@@ -110,7 +108,7 @@
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "turbo": "^1.6.1",
+    "turbo": "^1.6.3",
     "typescript": "^4.7.4",
     "webpack-cli": "^5.0.1"
   },
