--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,8 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
-    "build:styles": {
-      "dependsOn": ["^build:styles"]
-    },
-    "build:essentials": {
-      "dependsOn": ["^build:styles", "^build:essentials"]
-    },
     "build": {
-      "dependsOn": ["^build:essentials", "^build"]
+      "dependsOn": ["^build"]
     }
   }
 }
