--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "5.3.0",
+  "version": "6.0.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -13,9 +13,6 @@
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
-  "dependencies": {
-    "@nimbus-ds/tokens": "workspace:^"
-  },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
     "type": "git",
@@ -25,6 +22,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/tokens": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^",
     "@types/glob": "^8",
     "@vanilla-extract/css": "^1.9.2",
@@ -34,5 +32,6 @@
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0"
-  }
+  },
+  "stableVersion": "5.3.0"
 }
