--- a/packages/react/src/composite/Table/package.json
+++ b/packages/react/src/composite/Table/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/components",
-  "version": "2.1.0-rc.1",
+  "name": "@nimbus-ds/table",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -12,10 +12,6 @@
     "build": "webpack",
     "clean": "rm -rf dist",
     "version": "yarn version"
-  },
-  "dependencies": {
-    "@floating-ui/react-dom-interactions": "^0.10.1",
-    "@tiendanube/icons": "^0.3.1"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -30,7 +26,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "webpack": "^5.75.0"
+    "webpack": "^5.74.0"
   },
-  "stableVersion": "2.0.0"
+  "stableVersion": "0.0.0"
 }
