--- a/tsconfig.json
+++ b/tsconfig.json
@@ -71,7 +71,8 @@
       "@nimbus-ds/alert": ["./packages/react/src/composite/Alert/src"],
       "@nimbus-ds/card": ["./packages/react/src/composite/Card/src"],
       "@nimbus-ds/sidebar": ["./packages/react/src/composite/Sidebar/src"],
-      "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"]
+      "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"],
+      "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"]
     }
   }
 }
