feat: create new component Modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,7 @@
       "@nimbus-ds/tooltip": ["./packages/react/src/atomic/Tooltip/src"],
       "@nimbus-ds/alert": ["./packages/react/src/composite/Alert/src"],
       "@nimbus-ds/card": ["./packages/react/src/composite/Card/src"],
+      "@nimbus-ds/modal": ["./packages/react/src/composite/Modal/src"],
       "@nimbus-ds/sidebar": ["./packages/react/src/composite/Sidebar/src"],
       "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"],
       "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"]
