--- a/packages/react/src/atomic/Link/package.json
+++ b/packages/react/src/atomic/Link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/link",
-  "version": "3.1.0",
+  "version": "3.2.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,5 +31,6 @@
   "devDependencies": {
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "3.1.0"
 }
