--- a/packages/react/src/atomic/Button/package.json
+++ b/packages/react/src/atomic/Button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/button",
-  "version": "2.0.0",
+  "version": "2.1.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -35,5 +35,6 @@
     "@nimbus-ds/skeleton": "workspace:^",
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.0.0"
 }
