--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   check-version:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
