--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - "!dependabot/**"
+      - "!dependabot/**/**"
     paths-ignore:
       - "**/package.json"
       - ".yarn/versions/**"
