--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Publish
+      - name: Publish packages
         run: |
           export NODE_OPTIONS="--max_old_space_size=8192"
           yarn publish:stable
