--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
+    "storybook-dark-mode": "^2.0.6",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
