--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -8,3 +8,29 @@ on:
 jobs:
   create-tag:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Set node version
+        id: node_version
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "${{ steps.node_version.outputs.NVMRC }}"
+          registry-url: "https://registry.npmjs.org"
+      
+#       - name: Get current date
+#         id: date
+#         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        
+      - name: Get current date
+        id: date
+        run: |
+          echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
+          
+      - name: Test with environment variables
+        run: echo $TAG_NAME - $RELEASE_NAME
+        env:
+          TAG_NAME: ${{ env.date }}
+          RELEASE_NAME: ${{ env.date }}
