--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -38,5 +38,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: rickstaa/action-create-tag@v1
         with:
-          tag: ${{ env.date }}
-          message: ${{ env.date }}
+          tag: "latest"
+          message: "Latest release"
