--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -28,12 +28,11 @@ jobs:
         id: date
         run: |
           echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
-          
       - name: Test with environment variables
         run: echo $TAG_NAME - $RELEASE_NAME
         env:
-          TAG_NAME: ${{ env.date }}
-          RELEASE_NAME: ${{ env.date }}
+          TAG_NAME: nightly-tag-${{ env.date }}
+          RELEASE_NAME: nightly-release-${{ env.date }}
 
       - uses: actions/checkout@v3
       - uses: rickstaa/action-create-tag@v1
