--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -24,15 +24,21 @@ jobs:
 #         id: date
 #         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
         
-      - name: Get current date
-        id: date
+#       - name: Get current date
+#         id: date
+#         run: |
+#           echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
+          
+      - name: "Set current date as env variable"
         run: |
-          echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
+          echo "builddate=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        id: version  # this is used on variable path
+        
       - name: Test with environment variables
         run: echo $TAG_NAME - $RELEASE_NAME
         env:
-          TAG_NAME: nightly-tag-${{ env.date }}
-          RELEASE_NAME: nightly-release-${{ env.date }}
+          TAG_NAME: nightly-tag-${{ steps.version.outputs.builddate }}
+          RELEASE_NAME: nightly-release-${{ steps.version.outputs.builddate }}
 
       - uses: actions/checkout@v3
       - uses: rickstaa/action-create-tag@v1
